##################################################################################
#
#    the actual tests :
#
##################################################################################

# build the marlintest plugin
ADD_SUBDIRECTORY( ./marlintest )

# run some tests 
ADD_SUBDIRECTORY( ./testmarlin )
